CUI: inputs: correctly align textarea, we probably do not need that min-height/height.

--- a/src/scss/themes/fylr/components/_input.scss
+++ b/src/scss/themes/fylr/components/_input.scss
@@ -12,6 +12,7 @@ textarea {
 	padding: $input-padding-y $input-padding-x;
 	flex: 1 1 auto;
 	resize: vertical;
+	vertical-align: bottom; // see listView demo
 
 	&::placeholder {
 		color: $input-placeholder-color;
@@ -110,8 +111,8 @@ textarea {
 
 .cui-input-content-size {
 	textarea {
-		min-height: 40px; // todo
-		height: 40px; // todo
+		// min-height: 40px; // todo
+		// height: 40px; // todo
 		resize: none;
 	}
 }
